change upper left graphic

--- a/up/index.html
+++ b/up/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>jorys</strong><span>.io</span></a>
+						<a href="index.html" class="logo"><strong>Jory</strong> <span>Schmidt</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -39,7 +39,7 @@
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="#" class="button primary fit">See Projects</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
@@ -54,7 +54,7 @@
 								<p>A responsive site template designed by HTML5 UP<br />
 								and released under the Creative Commons.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">See Projects</a></li>
 								</ul>
 							</div>
 						</div>
@@ -115,8 +115,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Schedule Board</a></h3>
+										<p>An airport schedule board built using the MEAN stack with Angular 2+</p>
 									</header>
 								</article>
 							</section>
