customize and style portfolio

--- a/up/index.html
+++ b/up/index.html
@@ -25,24 +25,24 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Jory</strong> <span>Schmidt</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
+						<!--<nav>-->
+						<!--	<a href="#menu">Menu</a>-->
+						<!--</nav>-->
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">See Projects</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
+					<!--<nav id="menu">-->
+					<!--	<ul class="links">-->
+					<!--		<li><a href="index.html">Home</a></li>-->
+					<!--		<li><a href="landing.html">Landing</a></li>-->
+					<!--		<li><a href="generic.html">Generic</a></li>-->
+					<!--		<li><a href="elements.html">Elements</a></li>-->
+					<!--	</ul>-->
+					<!--	<ul class="actions stacked">-->
+					<!--		<li><a href="#" class="button primary fit">See Projects</a></li>-->
+					<!--		<li><a href="#" class="button fit">Log In</a></li>-->
+					<!--	</ul>-->
+					<!--</nav>-->
 
 				<!-- Banner -->
 					<section id="banner" class="major">
@@ -51,11 +51,10 @@
 								<h1>Hi, my name is Jory</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
-								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">See Projects</a></li>
-								</ul>
+								<p>Full Stack Developer, MEAN stack specialist</p>
+								<!--<ul class="actions">-->
+								<!--	<li><a href="#one" class="button next scrolly">See Projects</a></li>-->
+								<!--</ul>-->
 							</div>
 						</div>
 					</section>
@@ -115,7 +114,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Schedule Board</a></h3>
+										<h3><a href="#" class="link">Schedule Board</a></h3>
 										<p>An airport schedule board built using the MEAN stack with Angular 2+</p>
 									</header>
 								</article>
@@ -125,12 +124,12 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>A little about me</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
+									<p>I really really like creating solutions to a problem using code. There's something extremely satisfying in writing out some cryptic looking characters and that sequence of characters reveals itself to be something useful to humans. The technologies I know best are JavaScript, Express, Angular 1 & 2+, MongoDB, and HTML/CSS/Sass. I have some familiarity with React, Python, Ruby, Rails, PHP and Wordpress, but I'm fairly language agnostic and I'm willing to use whatever tools are best suited for solving any given problem. Web development is my forte, but I also have a keen interest in machine learning and mobile app development.</p>
+									<!--<ul class="actions">-->
+									<!--	<li><a href="landing.html" class="button next">Get Started</a></li>-->
+									<!--</ul>-->
 								</div>
 							</section>
 
@@ -139,53 +138,53 @@
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
+							<!--<section>-->
+								<!--<form method="post" action="mailto:jorymichaelschmidt@gmail.com">-->
+								<!--	<div class="fields">-->
+								<!--		<div class="field half">-->
+								<!--			<label for="name">Name</label>-->
+								<!--			<input type="text" name="name" id="name" />-->
+								<!--		</div>-->
+								<!--		<div class="field half">-->
+								<!--			<label for="email">Email</label>-->
+								<!--			<input type="text" name="email" id="email" />-->
+								<!--		</div>-->
+								<!--		<div class="field">-->
+								<!--			<label for="message">Message</label>-->
+								<!--			<textarea name="message" id="message" rows="6"></textarea>-->
+								<!--		</div>-->
+								<!--	</div>-->
+								<!--	<ul class="actions">-->
+								<!--		<li><input type="submit" value="Send Message" class="primary" /></li>-->
+								<!--		<li><input type="reset" value="Clear" /></li>-->
+								<!--	</ul>-->
+								<!--</form>-->
+							<!--</section>-->
 							<section class="split">
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="mailto:jorymichaelschmidt@gmail.com">jorymichaelschmidt@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>(614) 257-9553</span>
 									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
+								<!--</section>-->
+								<!--<section>-->
+								<!--	<div class="contact-method">-->
+								<!--		<span class="icon solid alt fa-home"></span>-->
+								<!--		<h3>Address</h3>-->
+								<!--		<span>1234 Somewhere Road #5432<br />-->
+								<!--		Nashville, TN 00000<br />-->
+								<!--		United States of America</span>-->
+								<!--	</div>-->
+								<!--</section>-->
+							<!--</section>-->
 						</div>
 					</section>
 
@@ -193,14 +192,14 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="http://twitter.com/joryschmidt" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<!--<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+								<!--<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>-->
+								<li><a href="http://github.com/joryschmidt" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/jory-schmidt-b46248116/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Jory Schmidt</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
