--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">OPEM</a></h3>
-										<p>An open mic discovery, signup, and organizational application</p>
+										<p>An open mic discovery, signup, and organizational application (Work in progress)</p>
 									</header>
 								</article>
 								<article>
