add skillsquire to portfolio

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="http://skillsquire.com" class="link">SkillSquire</a></h3>
+										<h3><a href="skillsquire/" class="link">SkillSquire</a></h3>
 										<p>A directory site for code learning resources</p>
 									</header>
 								</article>
