--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#" class="link">Schedule Board</a></h3>
-										<p>An airport schedule board built on the MEAN stack with Angular 7</p>
+										<h3><a href="platform/game.html" class="link">EloquentJS Platform Game</a></h3>
+										<p>A platformer written in JavaScript</p>
 									</header>
 								</article>
 							</section>
