--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 									<header class="major">
 										<h2>A little about me</h2>
 									</header>
-									<p>I really really like creating solutions to problems using code. I find there's something extremely satisfying in writing out a cryptic sequence of characters to make something useful. I typically only feel accomplished at the end of the day if I've learned something, and I appreciate software development for its particular kindness to the superlative autodidact. The technologies I know best are JavaScript, Express, Angular 1 & 2+, MongoDB, and HTML/CSS/Sass. I have some familiarity with React, Python, Ruby, Rails, PHP and Wordpress, but at the end of the day I'm fairly language agnostic. Web development is what I know, but I also have a keen interest in machine learning, mobile app development, and programming for automobile and home automation technologies.</p>
+									<p>I really like creating solutions to problems using code. I find there's something extremely satisfying in writing out a cryptic sequence of characters to make something useful. I typically only feel accomplished at the end of the day if I've learned something, and I appreciate software development for its particular kindness to the superlative autodidact. The technologies I know best are JavaScript, Express, Angular 1 & 2+, MongoDB, and HTML/CSS/Sass. I have some familiarity with React, Python, Ruby, Rails, PHP and Wordpress, but at the end of the day I'm fairly language agnostic. If my skills can be of use to you, please don't hesitate to contact me.</p>
 									<!--<ul class="actions">-->
 									<!--	<li><a href="landing.html" class="button next">Get Started</a></li>-->
 									<!--</ul>-->
