clean up app.js and add production server code to support TLS

--- a/index.html
+++ b/index.html
@@ -126,10 +126,7 @@
 									<header class="major">
 										<h2>A little about me</h2>
 									</header>
-									<p>I really like creating solutions to problems using code. I find there's something extremely satisfying in writing out a cryptic sequence of characters to make something useful. I typically only feel accomplished at the end of the day if I've learned something, and I appreciate software development for its particular kindness to the superlative autodidact. The technologies I know best are JavaScript, Express, Angular 1 & 2+, MongoDB, and HTML/CSS/Sass. I have some familiarity with React, Python, Ruby, Rails, PHP and Wordpress, but at the end of the day I'm fairly language agnostic. If my skills can be of use to you, please don't hesitate to contact me.</p>
-									<!--<ul class="actions">-->
-									<!--	<li><a href="landing.html" class="button next">Get Started</a></li>-->
-									<!--</ul>-->
+									<p>Right, so I've just been learning web development for fun because I really like to code. I've gotten pretty deep into it, writing full blown applications that integrate with external APIs and have animations and everything, so I'm at the point where I'd like to start getting paid to do it. What I'm really looking for is some mentorship and guidance, as well as some experience in the industry. I'm a self-motivated learner, I'm polite, and I don't smell. Please feel free to send me an email if you want to talk.</p>
 								</div>
 							</section>
 
@@ -138,53 +135,14 @@
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
-							<!--<section>-->
-								<!--<form method="post" action="mailto:jorymichaelschmidt@gmail.com">-->
-								<!--	<div class="fields">-->
-								<!--		<div class="field half">-->
-								<!--			<label for="name">Name</label>-->
-								<!--			<input type="text" name="name" id="name" />-->
-								<!--		</div>-->
-								<!--		<div class="field half">-->
-								<!--			<label for="email">Email</label>-->
-								<!--			<input type="text" name="email" id="email" />-->
-								<!--		</div>-->
-								<!--		<div class="field">-->
-								<!--			<label for="message">Message</label>-->
-								<!--			<textarea name="message" id="message" rows="6"></textarea>-->
-								<!--		</div>-->
-								<!--	</div>-->
-								<!--	<ul class="actions">-->
-								<!--		<li><input type="submit" value="Send Message" class="primary" /></li>-->
-								<!--		<li><input type="reset" value="Clear" /></li>-->
-								<!--	</ul>-->
-								<!--</form>-->
-							<!--</section>-->
 							<section class="split">
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="mailto:joryschmidt@protonmail.com">joryschmidt@protonmail.com</a>
+										<a href="mailto:codejory@protonmail.com">codejory@protonmail.com</a>
 									</div>
 								</section>
-								<!--<section>-->
-									<!--<div class="contact-method">-->
-									<!--	<span class="icon solid alt fa-phone"></span>-->
-									<!--	<h3>Phone</h3>-->
-									<!--	<span></span>-->
-									<!--</div>-->
-								<!--</section>-->
-								<!--<section>-->
-								<!--	<div class="contact-method">-->
-								<!--		<span class="icon solid alt fa-home"></span>-->
-								<!--		<h3>Address</h3>-->
-								<!--		<span>1234 Somewhere Road #5432<br />-->
-								<!--		Nashville, TN 00000<br />-->
-								<!--		United States of America</span>-->
-								<!--	</div>-->
-								<!--</section>-->
-							<!--</section>-->
 						</div>
 					</section>
 
