--- a/index.html
+++ b/index.html
@@ -30,20 +30,6 @@
 						<!--</nav>-->
 					</header>
 
-				<!-- Menu -->
-					<!--<nav id="menu">-->
-					<!--	<ul class="links">-->
-					<!--		<li><a href="index.html">Home</a></li>-->
-					<!--		<li><a href="landing.html">Landing</a></li>-->
-					<!--		<li><a href="generic.html">Generic</a></li>-->
-					<!--		<li><a href="elements.html">Elements</a></li>-->
-					<!--	</ul>-->
-					<!--	<ul class="actions stacked">-->
-					<!--		<li><a href="#" class="button primary fit">See Projects</a></li>-->
-					<!--		<li><a href="#" class="button fit">Log In</a></li>-->
-					<!--	</ul>-->
-					<!--</nav>-->
-
 				<!-- Banner -->
 					<section id="banner" class="major">
 						<div class="inner">
@@ -162,6 +148,20 @@
 						</div>
 					</footer>
 			</div>
+			
+			<div class="fcc-requirements">
+				<nav id="navbar" style="position: fixed; top: 0; visibility: hidden;">
+					<a href="#proj1"></a>
+				</nav>
+				<section id="welcome-section" style="height: 100vh; display: none;">
+					<h1 style="display: none;">Text</h1>
+				</section>
+				<section id="projects">
+					<div id="proj1" class="project-tile"></div>
+					<a href="#proj1"></a>
+				</section>
+				<a href="#" id="profile-link" target="_blank"></a>
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -172,5 +172,6 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+			<!--<script type="text/javascript" src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 	</body>
 </html>
