--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="platform/game.html" class="link">EloquentJS Platform Game</a></h3>
-										<p>A platformer written in JavaScript</p>
+										<p>A platformer written in JavaScript (Does not work on mobile, sorry)</p>
 									</header>
 								</article>
 							</section>
@@ -112,7 +112,7 @@
 									<header class="major">
 										<h2>A little about me</h2>
 									</header>
-									<p>Right, so I've just been learning web development for fun because I really like to code. I've gotten pretty deep into it, writing full blown applications that integrate with external APIs and have animations and everything, so I'm at the point where I'd like to start getting paid to do it. What I'm really looking for is some mentorship and guidance, as well as some experience in the industry. I'm a self-motivated learner, I'm polite, and I don't smell. Please feel free to send me an email if you want to talk.</p>
+									<p>I've been learning web development just for fun because I really like to code. I've gotten pretty deep into it, writing full stack applications that integrate with external APIs, figuring out best practices, learning relevant frameworks, etc. and I'm ready to take the next step and start developing professionally. What I'm really looking for is some mentorship and guidance, as well as some experience in the industry. I'm a self-motivated learner, I'm polite, and I don't smell. Please feel free to send me an email if you want to talk!</p>
 								</div>
 							</section>
 
