route name link to main page

--- a/natours/index.html
+++ b/natours/index.html
@@ -365,7 +365,7 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="#" class="footer__link">Jory Schmidt</a> for his portfolio.
+                        Built by <a href="/" class="footer__link">Jory Schmidt</a> for his portfolio.
                         Copyright &copy; by Jonas Schmedtmann for the website design.
                     </p>
                 </div>
