--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<header class="major">
 										<h2>A little about me</h2>
 									</header>
-									<p>I've been learning web development just for fun because I really like to code. I've gotten pretty deep into it, writing full stack applications that integrate with external APIs, figuring out best practices, learning relevant frameworks, etc. and I'm ready to take the next step and start developing professionally. What I'm really looking for is some mentorship and guidance, as well as some experience in the industry. I'm a self-motivated learner, I'm polite, and I don't smell. Please feel free to send me an email if you want to talk!</p>
+									<p>I've been learning web development just for fun because I really like to code. I've gotten pretty deep into it, writing full stack applications that integrate with external APIs, figuring out best practices, learning relevant frameworks, and generally learning a lot about tech in general during the process of finding out the answers to my own, legion questions. I'm ready to take the next step and start developing professionally. What I'm really looking for is some mentorship and guidance, as well as some experience in the industry. I'm a self-motivated and voracious learner of things. If that kind of hunger is what you'be been looking for, please send me an email.</p>
 								</div>
 							</section>
 
